<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Notes Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_note">New Note</string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="dateOfVisit">Date of Visit</string>
    <string name="visitAgain">Visit Again?</string>
    <string name="desc">Description</string>
    <string name="title_activity_map">MapActivity</string>

</resources>
